--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "npm-run-all --parallel server start",
+    "dev": "run-p server start",
     "server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
