--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8000 && react-scripts start",
     "dev": "run-p server start",
     "server": "nodemon server.js",
     "build": "react-scripts build",
