--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
     "dev": "run-p server start",
-    "server": "nodemon server.js",
+    "server": "pkill -f node && nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
